syntax = "proto3";

package ledger.messages;

import "commons.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
    flat_package: false
    lenses: true
    preserve_unknown_fields: false
};

message LedgerInstructionsMessage {

    oneof sealed_value {
        Creation creation = 1;
        Authorization authorization = 2;
    }
}

message Creation {
    string transactionId = 1 [(scalapb.field).type = "transactions.TransactionId"];
    string accountId = 2 [(scalapb.field).type = "accounts.AccountId"];
    stem.commons.BigDecimal amount = 3 [(scalapb.field).no_box = true];
}

message Authorization {
    string transactionId = 1 [(scalapb.field).type = "transactions.TransactionId"];
}

message LedgerId {
    string value = 1;
}